# demo-finance-engine

./: .gitignore  README.md  main.py  pyproject.toml  validate_data_quality.py
analytics/: __init__.py  quick_analysis.py
benchmark/: event_horizon_test.py  hyperspace_test.py  limit_test.py  performance_test.py  quantum_test.py  results.md  run_pipeline_benchmark.py  singularity_test.py
data_generator/: __init__.py  generate_all.py  merchant_catalog.py  transaction_generator.py
docs/: 100m_performance_challenge.md  analysis_results.md  blog_gold_layer_optimization.md  deep_dive_guide.md  phase1_retrospective.md  phase2_retrospective.md  phase3_retrospective.md  phase4_retrospective.md  phase5_retrospective.md  phase6_supersonic_retrospective.md  phase7_quantum_retrospective.md  phase8_singularity_final.md  phase9_event_horizon_ultimate.md  roadmap.md  scaling_to_100m.md  troubleshooting_100m_generation.md
jobs/: __init__.py  bronze_ingestion.py  gold_dimensions.py  gold_fact_table.py  quantum_pipeline.py  run_pipeline.py  silver_transformation.py
notebooks/: 01_data_analysis.py
schemas/: __init__.py  bronze_schemas.py
utils/: __init__.py  data_quality.py  spark_session.py
